@@ -1,3 +1,6 @@
+- Bug Fix: RegistrationConclusionBean should always use StudentCurricularPlan and ProgramConclusion precision
+- Refactor: RegistrationConclusionBean constructor cleanup
+
 32.12.0 (20-05-2022)
 - Refactor: Competence course level as entity
 
